--- a/index-lindbergh.html
+++ b/index-lindbergh.html
@@ -29,7 +29,7 @@
 	<div class="wrapper1">
 		<div class="border1">
 		<div class="image1">
-		<img class="opacity1" src="foto/emmawatson.png" alt="lindberg">
+		<img class="opacity1" src="image/emmawatson.png" alt="lindberg">
 		<p class="text1">Emma Watson</p>
 	</div>
 </div>
