--- a/index-lindbergh.html
+++ b/index-lindbergh.html
@@ -35,20 +35,20 @@
 </div>
 			<div class="border1">
 		<div class="image1">
-		<img class="opacity1" src="foto/irinashaik.png" alt="lindberg">
+		<img class="opacity1" src="image/irinashaik.png" alt="lindberg">
 		<p class="text1">Irina Shayk</p>
 	</div>
 	</div>
 				<div class="border1">
 		<div class="image1">
-		<img class="opacity1" src="foto/kateelizabethwinslet.png" alt="lindberg">
+		<img class="opacity1" src="image/kateelizabethwinslet.png" alt="lindberg">
 		<p class="text1">Kate Winslet</p>
 </div>
 	</div>
 	
 				<div class="border1">
 		<div class="image1">
-		<img class="opacity1" src="foto/penelopecruz.png" alt="lindberg">
+		<img class="opacity1" src="image/penelopecruz.png" alt="lindberg">
 		<p class="text1">Penelope Cruz</p>
 </div>
 	</div>
@@ -56,7 +56,7 @@
 
 				<div class="border1">
 		<div class="image1">
-		<img class="opacity1" src="foto/rosalia.png" alt="lindberg">
+		<img class="opacity1" src="image/rosalia.png" alt="lindberg">
 		<p class="text1">Rosalia</p>
 </div>
 	</div>
@@ -64,7 +64,7 @@
 
 				<div class="border1">
 		<div class="image1">
-		<img class="opacity1" src="foto/vanessachantalparadis.png" alt="lindberg">
+		<img class="opacity1" src="image/vanessachantalparadis.png" alt="lindberg">
 		<p class="text1">Vanessa Paradis</p>
 </div>
 	</div>
