--- a/index —inline block.html
+++ b/index —inline block.html
@@ -7,21 +7,37 @@
 	</head>
 <body>
 <div class="menu">
-<ul>
-<li>
-<a href="index — float.html" title="float">Float</a>
+	<div class="menu-block">
+		<ul>
+			<li>
+			<a href="index.html">main</a>
+			</li>
+		<li>
+		<a href="#" title="block">block</a>
+		<ul class="in-menu-block">
+		<li>
+		<a href="index — tablet call.html"title="tablecell">table-cell</a>
+		</li>
+		<li>
+		<a href="index —inline block.html"title="inline-block">inline-block</a>
+		</li>
+		<li>
+		<a href="index — float.html"title="float">float</a>
+		<ul class="float-menu">
+		<li>
+		<a href="#"title="float">float_one</a></li>
+	    <li>
+		<a href="#"title="float_two">float_two</a> 
+		</li>
+		</ul>
+	</li>
+	<li>
+		<a href="index.html"title="flex">flex</a>
+	</li>
+</ul>
 </li>
 <li>
-<a href="index.html" title="float">Flex</a>
-</li>
-<li>
-<a href="#" title="inline block">Inline block</a>
-</li>
-<li>
-<a href="index — tablet call.html" title="tablet call">Tablet call</a>
-</li>
-<li>
-	<a href="index-lindbergh.html" title="img">IMG</a>
+<a href="index-lindbergh.html"title="image">image</a>
 </li>
 </ul>
 	<div class="wrapper">
